# road-n-roll

./: .gitignore  CMakeLists.txt  CMakePresets.json
core/: .gitignore  CMakeLists.txt  CMakePresets.json  MANIFEST.in  README.md  compile_commands.json  requirements.txt  setup.py
core/app/: CMakeLists.txt  main.cpp
core/lib/: CMakeLists.txt  server.cpp  server.hpp
core/lib/database/: CMakeLists.txt  database.cpp  database.hpp  database_iface.hpp  query_builder.cpp  query_builder.hpp  serializer.cpp  serializer.hpp
core/lib/game_store/: CMakeLists.txt  game_store.cpp  game_store.hpp
core/lib/router/: CMakeLists.txt  matches.cpp  matches.hpp  router.cpp  router.hpp
core/lib/server/: CMakeLists.txt  server.cpp  server.hpp  server_iface.hpp
core/pycore/: __init__.py  __main__.py  server.py
core/specs/: openapi.yaml
core/test/: CMakeLists.txt
core/test/lib/: CMakeLists.txt
core/test/lib/database/: CMakeLists.txt  serializer_test.cpp
core/test/lib/router/: CMakeLists.txt  matches_test.cpp  router_test.cpp  segment_pattern_rule_test.cpp
database/: README.md
database/data/: data.yaml  schema.json
database/schema/: 001_games.sql  002_player_colors.sql  003_players.sql  003_tiles.sql  004_cards.sql  005_game_players.sql  006_rounds.sql  007_round_cards.sql  008_moves.sql  009_scores.sql
database/scripts/: handle.py  migrate.py
front/: app.py  dist  requirements.txt
front/templates/: game_with_uuid.html  games.html
itests/: .gitignore  README.md  requirements.txt  requirements_manylinux.txt  requirements_win_amd64.txt  test_games_crud.py
